--- a/course-materials/week3.qmd
+++ b/course-materials/week3.qmd
@@ -25,19 +25,17 @@ Image from [Amy Cesal](https://www.amycesal.com/){target="_blank"}'s article, [W
 
 *There is no lecture this week!*
 
+## {{< fa clipboard-list title="a clipboard with a To Do list" >}} Pre-discussion Prep {#pre-discussion-prep} 
+### A. Prepare a `week3-discussion.qmd` file
+
+Add a new blank file to your class repo at the following location: `EDS-240-class-examples/week3/week3-discussion.qmd.` Fill out the necessary YAML information (title, author, date + any other information you find helpful).
+
 ## {{< fa comments title="two speech bubbles" >}} Discussion Materials {#discussion-materials}
 
 | {{< fa person-chalkboard title="A person motioning at a chalkboard" >}} Discussion Slides | {{< fa file-code title="A code file" >}} Exercise instructions | {{< fa key title="A key" >}} Exercise solutions |
 |-------------------|-------------------|--------------|
 | [D3 slides: Alt Text](discussion/week3/week3-alt-text-slides.qmd){target="_blank"} | [D3 exercise: writing alt text](discussion/week3/week3-exercise.qmd) | [D3 solution](discussion/week3/week3-solution.qmd) |
 : {.hover .bordered tbl-colwidths="[35,35,30]"} 
-
-
-<!-- **[Alternative text](https://webaim.org/techniques/alttext/),** aka **alt text**, makes our data visualizations accessible to a broader community. Today's section will focus crafting effective alt text, as well as how to include it when rendering visualizations in reproducible reports, websites, etc. using publishing tools like Quarto. -->
-
-<!-- ::: {.center-text} -->
-<!-- [{{< fa person-chalkboard title="A person motioning at a chalkboard" >}} Week 2 discussion slides](discussion/week2/week2-alt-text.qmd){.btn role="button" target="_blank"}  -->
-<!-- ::: -->
 
 ## {{< fa pencil title="pencil" >}} Assignment Reminders {#assignment-reminders}
 
