--- a/course-materials/week1.qmd
+++ b/course-materials/week1.qmd
@@ -50,6 +50,8 @@ We'll be coding together quite a bit throughout this course. To stay organized, 
 
 **You should also create a folder for each week (e.g. `week1/`, `week2/`, `week3/`, etc.)** inside your repository's root directory to help keep all the various files that we'll download / create organized. This consistent naming scheme will also make it easy to add large files (e.g. data files) to your `.gitignore` (you'll do this for the first time in this week's pre-discussion prep).
 
+**Remember to fill out your repo's README,** referencing the [MEDS README Guidelines](https://ucsb-meds.github.io/README-guidelines/), as well.
+
 ### C. Download the `.qmd` template
 
 Template `.qmd` files will be provided alongside (most) lecture slides to help keep us organized and on track throughout class. They are available for download directly [from GitHub](https://github.com/EDS-240-Data-Viz/code-along-templates/tree/main){target="_blank"} at the link(s) provided in the Lecture Materials table (below). Look for the download button at the top right corner of the file (it looks similar to this, {{< fa download title="a downward pointing arrow atop a hard drive" >}}). Please download all necessary templates and save them to the appropriate `EDS-240-data-viz-examples/weekX` folder before each class. 
