finished week 4 lectures/templates/keys/discussion section materials; website not building bc EDI Data Repository offline due to power outage (so can't read data in)

--- a/course-materials/discussion/week2/week2-slides.qmd
+++ b/course-materials/discussion/week2/week2-slides.qmd
@@ -17,6 +17,8 @@ editor_options:
 
 [*Recreating US Drought Monitor viz*]{.custom-subtitle}
 
+[*Part 1: graphic form*]{.custom-subtitle2}
+
 <hr class="hr-dark-blue">
 
 [Week 2 | January 14^th^, 2024]{.custom-subtitle3}
