--- a/course-materials/week1.qmd
+++ b/course-materials/week1.qmd
@@ -15,8 +15,6 @@ knitr::include_graphics(here::here("images", "ggplot2.png"))
 
 ## {{< fa clipboard-list title="a clipboard with a To Do list" >}} Pre-lecture Prep {#pre-class-prep}
 
-Please be sure to complete the following before class:
-
 ### A. Install required packages
 
 ```{r}
@@ -69,7 +67,7 @@ Template `.qmd` files will be provided alongside (most) lecture slides to help k
 
 ## {{< fa clipboard-list title="a clipboard with a To Do list" >}} Pre-discussion Prep {#pre-discussion-prep} 
 
-Today's discussion will **focus on data cleaning / wrangling**. Before coming to section, you'll need to install some packages and download data.
+<!-- Today's discussion will **focus on data cleaning / wrangling**. Before coming to section, you'll need to install some packages and download data. -->
 
 ### A. Install required packages
 
@@ -130,7 +128,7 @@ Add a new blank file to your class repo -- you'll complete your discussion exerc
 
 | {{< fa person-chalkboard title="A person motioning at a chalkboard" >}} Discussion Slides | {{< fa file-code title="A code file" >}} Exercise instructions | {{< fa key title="A key" >}} Exercise solutions |
 |-------------------|-------------------|--------------|
-| [D1 slides: data wrangling](discussion/week1/week1-wrangling-slides.qmd) | [D1 exercise: wrangle fracking data](discussion/week1/week1-exercise.qmd) | [D1 solution](discussion/week1/week1-solution.qmd) |
+| [D1 slides: data wrangling](discussion/week1/week1-slides.qmd) | [D1 exercise: wrangle fracking data](discussion/week1/week1-exercise.qmd) | [D1 solution](discussion/week1/week1-solution.qmd) |
 : {.hover .bordered tbl-colwidths="[35,35,30]"} 
 
 <br>
