--- a/course-materials/assignments/HW3.qmd
+++ b/course-materials/assignments/HW3.qmd
@@ -1,24 +1,14 @@
 ---
 title: "Assignment #3 (HW #3)"
-subtitle: "Assigned Mon 02/12/2024 | Due Sat 02/24/2024"
+subtitle: "Assigned Mon 02/10/2025 | Due Sat 02/22/2025"
 ---
-
-<!-- ::: {.center-text} -->
-<!-- <div class="pink-box"> -->
-<!-- ***You must earn a "Satisfactory" mark for  Part I only to earn a "Satisfactory" mark for Assignment #3 -- Part II is optional extra practice (will not be graded) in case you're looking for some additional practice.*** -->
-
-<!-- **NOTE:** Assignments are to be submitted via GitHub Classrooms, unless otherwise noted. Each student receives one "free pass" for not submitting assignments via specified channels, after which you will receive a "Not Yet" mark. -->
-
-<!-- **Read each part of the assignment carefully**, and use the check boxes to ensure you've addressed all elements of the assignment! -->
-<!-- </div> -->
-<!-- ::: -->
 
 ## Learning Objectives
 
-HW #3 will have you focus on making more progress towards completing your final assignment (HW #4). Your final assignment is meant to combine all of the course learning outcomes(!):
+HW #3 will have you focus on making more progress towards completing your final assignment (HW #4). As a reminder, your final assignment is meant to combine all of the course learning outcomes(!):
 
 - identify which types of visualizations are most appropriate for your data and your audience
-- prepare (e.g. clean, explore, wrangle) data so that it’s appropriately formatted for building data visualizations
+- prepare (e.g. clean, explore, wrangle) data so that its appropriately formatted for building data visualizations
 - build effective, responsible, accessible, and aesthetically-pleasing visualizations using the R programming language, and specifically `{ggplot2}` + ggplot2 extension packages
 - write code from scratch and read and adapt code written by others
 - apply a DEI (Diversity, Equity & Inclusion) lens to the process of designing data visualizations 
@@ -26,43 +16,41 @@ HW #3 will have you focus on making more progress towards completing your final 
 
 ## Description 
 
-[**Please begin by reviewing [HW #4](HW4.qmd) in full**]{.teal-text} so that you are familiar with the expectations for your final submission at the end of the quarter -- you'll again be making some incremental steps towards your final deliverables here in HW #3. 
+[**Please begin by reviewing [HW #4](HW4.qmd){target="_blank"} in full**]{.teal-text} to refamiliarize yourself with the expectations for your final submission at the end of the quarter -- you'll again be making some incremental steps towards your final deliverables here in HW #3. 
 
 [**For HW #3, you must answer / complete the following:**]{.teal-text}
 
-- [ ] Which option do you plan to pursue? It's okay if this has changed since HW #1.
-- [ ] Restate your question(s). Has this changed at all since HW #1? If yes, how so? 
+- [ ] **1.** Which option do you plan to pursue? It's okay if this has changed since HW #1.
+- [ ] **2.** Restate your question(s). Has this changed at all since HW #1? If yes, how so? 
 
 ::: {.callout-note}
-Be mindful that the number of questions you list above will depend on which option you choose to pursue:
+## Be mindful that the number of questions you list above will depend on which option you choose to pursue:
 
-- If you choose [option 1](HW4.qmd#option-1), you should have **one question** that each of your three visualizations works to answer, where each visualization is meant to reach / serve a different target audience and purpose.
-- If you choose [option 2](HW4.qmd#option-2), you should have **one overarching question** and **at least three sub-questions** that each of your infographic components answer.
-
-Please refer to [HW #4](HW4.qmd) for full details on each of these options.
+- If you choose [option 1](HW4.qmd#option-1){target="_blank"}, you should have **one overarching question** and **at least three sub-questions** that each of your infographic components answer.
+- If you choose [option 2 ](HW4.qmd#option-2){target="_blank"}, you should have **one question** that each of your three visualizations works to answer, where each visualization is meant to reach / serve a different target audience and purpose.
+- If you chose [option 3](HW4.qmd#option-3){target="_blank"}, you should refer back to your approved proposal to determine how many questions you should list.
 :::
 
-- [ ] Explain which variables from your data set(s) you will use to answer your question(s).
+- [ ] **3.** Explain which variables from your data set(s) you will use to answer your question(s).
 
 ::: {.callout-important}
 ## Important -- be specific here!
 For example, let's say I'm interested in how Lyme disease incidence is changing over time for states X, Y and Z. An appropriate explanation of variables might look something like this: 
 
 >*"I have two data sets, one containing population estimates by state from the `{tidycensus}` package, and another from the CDC containing lyme disease case counts by county and year. After wrangling / joining these data sets, I was able to calculate disease incidence as cases per 100k people at the state level. Doing so provides me with three variables to visualize: time (years), disease incidence (cases per 100k people), and state."*
-
- <!-- I will create a line chart with time (year) on the x-axis and disease incidence (cases per 100k) on the y-axis. Each line will represent a different state. -->
 :::
 
-- [ ] In HW #2, you should have created some exploratory data viz to better understand your data. You may already have some ideas of how you plan to formally visualize your data, but it's *incredibly* helpful to look at visualizations by other creators for inspiration. Find at least two data visualizations that you could (potentially) borrow / adapt pieces from. Link to them or download and embed them into your `.qmd` file, and explain which elements you might borrow (e.g. the graphic form, legend design, layout, etc.). 
+- [ ] **4.** In [HW #2](HW2.qmd){target="_blank"}, you created some exploratory data viz to better understand your data. You may already have some ideas of how you plan to formally visualize your data, but it's *incredibly* helpful to look at visualizations by other creators for inspiration. Find *at least two* data visualizations that you could (potentially) borrow / adapt pieces from. Link to them or download and embed them into your `.qmd` file, and explain which elements you might borrow (e.g. the graphic form, legend design, layout, etc.). 
 
 ::: {.callout-tip}
-## Tip: Remember to check out the [Resources page](../resources.qmd)!!
-I've added a tons of really wonderful websites, tutorials, and links to the repos / websites of some seriously incredible [data viz creators](../resources.qmd#inspirational-data-visualization-creators). This is an excellent place to start when looking for inspiration.
-
-If you have an account, it can also be helpful to search **#tidytuesday** on [X](https://twitter.com/) (formally known as Twitter).
+## Tip: Remember to check out the [Resources page](../resources.qmd){target="_blank"}!!
+It lists tons of really wonderful websites, tutorials, and links to the repos / websites of some seriously incredible [data viz creators](../resources.qmd#inspirational-data-visualization-creators){target="_blank"}. This is an excellent place to start when looking for inspiration.
 :::
 
-- [ ] Hand-draw your anticipated three visualizations (option 1) or infographic (which should include at least three component visualizations; option 2). Take a photo of your drawing and embed it in your rendered `.qmd` file -- **note** that these are not *exploratory* visualizations, but rather your plan for your final visualizations that you will eventually polish and submit with HW #4.
+- [ ] **5.** Hand-draw your anticipated visualizations, then take a photo of your drawing(s) and embed it in your rendered `.qmd` file -- **note** that these are not *exploratory* visualizations, but rather your plan for your final visualizations that you will eventually polish and submit with HW #4. You should have:
+    - a sketch of your infographic (which should include at least three component visualizations) if you are pursuing [option 1](HW4.qmd#option-1){target="_blank"}
+    - a sketch of all three separate visualizations if you are pursuing [option 2](HW4.qmd#option-2){target="_blank"}
+    - a sketch of the approved number of visualizations, as outlined in your proposal, if you are pursuing [option 3](HW4.qmd#option-3){target="_blank"}
 
 ::: {.callout-tip}
 ## Tip: Embedding images into a `.qmd` file
@@ -95,7 +83,7 @@ knitr::include_graphics("images/hand-drawn-plot.png")
 
 :::
 
-- [ ] Mock up **all** of your hand drawn visualizations using code. We understand that you will continue to iterate on these into HW #4 (particularly after receiving feedback), but by the end of HW #3, you should:
+- [ ] **6.** Mock up **all** of your hand drawn visualizations using code. We understand that you will continue to iterate on these into HW #4 (particularly after receiving feedback), but by the end of HW #3, you should:
 
   - have your data plotted (if you're experimenting with a graphic form(s) that was not explicitly covered in class, we understand that this may take some more time to build; you should have as much put together as possible)
   - use appropriate strategies to highlight / focus attention on a clear message
@@ -103,10 +91,10 @@ knitr::include_graphics("images/hand-drawn-plot.png")
   - experiment with colors and typefaces / fonts
   - create a presentable / aesthetically-pleasing theme (e.g. (re)move gridlines / legends as appropriate, adjust font sizes, etc.)
 
-- [ ] Answer the following questions:
-    - [ ] What challenges did you encounter or anticipate encountering as you continue to build / iterate on your visualizations in R?
-    - [ ] What ggplot extension tools / packages do you need to use to build your visualizations? Are there any that we haven't covered in class that you'll be learning how to use for your visualizations?
-    - [ ] What feedback do you need from the instructional team and / or your peers to ensure that your intended message is clear?
+- [ ] **7.** Answer the following questions:
+    - [ ] **a.** What challenges did you encounter or anticipate encountering as you continue to build / iterate on your visualizations in R?
+    - [ ] **b.** What ggplot extension tools / packages do you need to use to build your visualizations? Are there any that we haven't covered in class that you'll be learning how to use for your visualizations?
+    - [ ] **c.** What feedback do you need from the instructional team and / or your peers to ensure that your intended message is clear?
 
 ## Rubric (specifications)
 
@@ -129,7 +117,7 @@ format:
 ---
 ```
 
-- [ ] Complete all exercises and answer all questions under the [Description section](HW3.qmd#description) above (use the check boxes to ensure you've completed all required parts).
+- [ ] Complete all exercises and answer all questions under the [Description section](HW3.qmd#description) above (use the check boxes to ensure you've completed all 7 required parts).
 
 ::: {.callout-note}
 ## A few notes on expectations
@@ -141,7 +129,7 @@ format:
 :::
 
 - [ ] Ensure all code chunks have the correct options set so that **(a)** code *and* outputs render, and **(b)** warnings and messages are suppressed (unless there is a reason to have them print). *Please note that rendered documents that don't have correctly specified chunk options will receive a "Not Yet" score.*
-- [ ] Code should be appropriately styled and annotated (please see [this resource](../clean-code-guide.qmd) on the course website), and your `.qmd` file should be easy to navigate.
-- [ ] When complete, **render** your `HW3-drafting-viz.qmd` file, **verify** that you can open the resulting `HW3-drafting-viz.html` file in your browser and that all formatting looks good. **Rename** your `.html` file so that it has your first initial / last name at the start (e.g. `SCsik-HW3-drafting-viz.html`) then **send** it to both Sevan and Sam on Slack via direct message.
+- [ ] Code should be appropriately styled and annotated (please see [this resource](../../clean-code-guide.qmd){target="_blank"} on the course website), and your `.qmd` file should be easy to navigate.
+- [ ] When complete, **render** your `HW3-drafting-viz.qmd` file, **verify** that you can open the resulting `HW3-drafting-viz.html` file in your browser and that all formatting looks good. **Rename** your `.html` file so that it has your first initial / last name at the start (e.g. `SCsik-HW3-drafting-viz.html`), then **send** it to both Sloane and Sam on Slack via direct message by 11:59pm on Sat 02/22/2025.
 
 
